--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -33,6 +33,8 @@
 <style lang="scss">
     header {
         padding: 0 2rem;
+        position: fixed;
+        width: 100%;
     }
     nav {
         display: flex;
