--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
+import Footer from "../components/Footer.astro";
+import Socials from "../components/Socials.astro";
 
 interface Props {
 	title: string;
@@ -20,9 +20,11 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-		<Header />
-		<slot />
-		<Footer />
+		<Socials />
+		<div class="container">
+			<slot />
+			<Footer />
+		</div>
 	</body>
 </html>
 <style is:global>
@@ -37,10 +39,19 @@ const { title } = Astro.props;
 			white 60%
 		);
 	}
+	* {
+		box-sizing: border-box;
+	}
 	html {
 		font-family: system-ui, sans-serif;
-		background: #13151a;
+		background: #000000;
 		background-size: 224px;
+	}
+	body {
+		margin: 0;
+		display: grid;
+		place-items: center;
+		font-size: 18px;
 	}
 	code {
 		font-family:
