--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -1,22 +1,23 @@
-<div class="wrappy">
-    <p>HTML</p>
-    <p>CSS</p>
-    <p>JavaScript</p>
-    <p>React</p>
-    <p>Astro</p>
-    <p>Framer Motion</p>
-    <p>SASS</p>
+<div class="skills-wrapper">
+    <a href="http://" target="_blank" rel="noopener noreferrer">React</a>
+    <a href="http://" target="_blank" rel="noopener noreferrer">Astro</a>
+    <a href="http://" target="_blank" rel="noopener noreferrer">JavaScript</a>
+    <a href="http://" target="_blank" rel="noopener noreferrer">Framer Motion</a>
+    <a href="http://" target="_blank" rel="noopener noreferrer">SASS</a>
+    <a href="http://" target="_blank" rel="noopener noreferrer">HTML5</a>
+    <a href="http://" target="_blank" rel="noopener noreferrer">CSS3</a>
 </div>
 
 <style>
-    .wrappy {
+    .skills-wrapper {
         display: flex;
+        flex-wrap: wrap;
         gap: 1rem;
     }
-    p {
+    a {
         padding-bottom: 0.5rem;
-        color: rgb(100, 255, 218);
-        border-bottom: 1px solid rgb(100, 255, 218);
+        color: #64fff9;
+        border-bottom: 1px solid #64fff9;
         text-align: center;
         text-decoration: none;
         display: inline-block;
