--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -27,17 +27,18 @@ import { Icon } from "astro-icon";
         bottom: 100px;
         left: 40px;
         width: 50px;
+        @media (max-width: 1200px) {
+            position: static;
+            flex-direction: row;
+        }
     }
-    .socials-wrapper::after {
-        content: '';
-        width: 1px;
-        height: 50px;
-        background: white;
-        margin: 0 auto;
-    }
-
+    
     [astro-icon] {
         color: #64ffda;
         height: 30px;
+        @media (max-width: 1200px) {
+            color: rgb(163 163 163);
+            height: 25px;
+        }
     }
 </style>
