--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -10,7 +10,6 @@
 </div>
 
 <style lang="scss">
-    @use "../styles/_variables.scss";
 
     .skills-wrapper {
         display: flex;
@@ -20,15 +19,15 @@
 
     a {
         padding-bottom: 0.5rem;
-        color: variables.$color-accent;
-        border-bottom: 1px solid variables.$color-accent;
+        color: var(--color-accent);
+        border-bottom: 1px solid var(--color-accent);
         text-align: center;
         text-decoration: none;
         display: inline-block;
         font-size: 16px;
         margin: 4px 2px;
         &:hover {
-            color: darken(variables.$color-accent, 25%);
+            color: white;
         }
     }
 </style>
