--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -18,7 +18,6 @@ import { Icon } from "astro-icon";
 </div>
 
 <style lang="scss">
-    @use "../styles/_variables.scss";
 
     .socials-wrapper {
         display: flex;
@@ -36,10 +35,10 @@ import { Icon } from "astro-icon";
     }
 
     [astro-icon] {
-        color: variables.$color-accent;
+        color: var(--color-accent);
         height: 25px;
         @media (max-width: 1200px) {
-            color: rgb(163 163 163);
+            color: var(--color-secondary);
             height: 25px;
         }
     }
