--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Footer from "../components/Footer.astro";
+import Accessibility from "../components/Accessibility.astro";
 interface Props {
 	title: string;
 }
@@ -18,6 +19,7 @@ const { title } = Astro.props;
 	</head>
 	<body>
 		<div class="container">
+			<Accessibility />
 			<main>
 				<slot />
 			</main>
@@ -27,16 +29,27 @@ const { title } = Astro.props;
 </html>
 
 <style lang="scss" is:global>
-	@use "../styles/_variables.scss";
-
 	* {
 		box-sizing: border-box;
 	}
 
 	html {
 		font-family: system-ui, sans-serif;
-		background: variables.$color-background;
+		background: var(--color-background);
 		background-size: 224px;
+
+		--color-background: black;
+		--color-primary: white;
+		--color-secondary: #808080;
+		--color-accent: #64fff9;
+	}
+
+	html[data-theme="light"] {
+		background: var(--color-background);
+		--color-background: white;
+		--color-primary: black;
+		--color-secondary: #808080;
+		--color-accent: #fa64ff;
 	}
 
 	body {
@@ -44,7 +57,7 @@ const { title } = Astro.props;
 		display: grid;
 		place-items: center;
 		font-size: 18px;
-		color: variables.$color-primary;
+		color: var(--color-primary);
 	}
 
 	.container {
