--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -24,9 +24,11 @@ import Socials from "../components/Socials.astro";
 <style lang="scss">
     footer {
         color: var(--color-secondary);
-        font-size: 1rem;
         max-width: 400px;
         padding: 4rem 0 5rem;
+        p {
+            font-size: var(--small);
+        }
 
         @media (max-width: 950px) {
             padding-top: 4rem;
