--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -24,7 +24,8 @@
         text-align: center;
         text-decoration: none;
         display: inline-block;
-        font-size: 16px;
+        font-size: var(--medium);
+        font-weight: 600;
         margin: 4px 2px;
         &:hover {
             color: white;
