--- a/src/components/Accessibility.astro
+++ b/src/components/Accessibility.astro
@@ -3,10 +3,10 @@ import { Icon } from "astro-icon";
 ---
 
 <div class="accessibility-wrapper">
-    <button class="theme-toggle" data-tooltip="Toggle dark/light mode">
+    <button class="theme-toggle" data-tooltip="Toggle Theme">
         <Icon name="ri:contrast-2-fill" />
     </button>
-    <button class="font-toggle" data-tooltip="Toggle large font size">
+    <button class="font-toggle" data-tooltip="Toggle Font Size">
         <Icon name="ri:font-size-2" />
     </button>
 </div>
@@ -16,12 +16,14 @@ import { Icon } from "astro-icon";
         display: flex;
         gap: 1rem;
         position: fixed;
-        bottom: 50px;
+        bottom: 100px;
         right: 100px;
     }
 
     button {
         background: none;
+        font-size: 1.1rem;
+        font-weight: 500;
         border: none;
         cursor: pointer;
         position: relative;
@@ -42,18 +44,18 @@ import { Icon } from "astro-icon";
         transform: translateX(-50%) translateY(calc(-100% - 20px)) scale(var(--scale));
 
         content: attr(data-tooltip);
-        color: white;
+        color: var(--color-background);
         padding: 0.5rem;
         border-radius: 0.3rem;
         width: max-content;
         text-align: center;
-        background-color: grey;
+        background-color: var(--color-accent);
     }
     button::after {
 
         content: '';
         border: 10px solid transparent;
-        border-top-color: grey;
+        border-top-color: var(--color-accent);
         transform-origin: top center;
     }
     button:hover::before,
@@ -62,7 +64,43 @@ import { Icon } from "astro-icon";
     }
 
     [astro-icon] {
-        height: 30px;
+        height: 25px;
         color: var(--color-accent);
     }
 </style>
+
+<script is:inline>
+    const theme = (() => {
+      if (typeof localStorage !== 'undefined' && localStorage.getItem('theme')) {
+        return localStorage.getItem('theme');
+      }
+      if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
+        return 'dark';
+      }
+        return 'light';
+    })();
+  
+    if (theme === 'light') {
+      document.documentElement.classList.remove('dark');
+    } else {
+      document.documentElement.classList.add('dark');
+    }
+  
+    window.localStorage.setItem('theme', theme);
+  
+    const handleToggleClick = () => {
+      const element = document.documentElement;
+      element.classList.toggle("dark");
+  
+      const isDark = element.classList.contains("dark");
+      localStorage.setItem("theme", isDark ? "dark" : "light");
+    }
+
+    const handleFontToggleClick = () => {
+        document.documentElement.classList.toggle("accessibility-fontsize");
+    }
+  
+    document.querySelector(".theme-toggle").addEventListener("click", handleToggleClick);
+    document.querySelector(".font-toggle").addEventListener("click", handleFontToggleClick);
+
+  </script>
