--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -18,7 +18,6 @@ import { Icon } from "astro-icon";
 </div>
 
 <style lang="scss">
-
     .socials-wrapper {
         display: flex;
         flex-direction: column;
@@ -37,6 +36,10 @@ import { Icon } from "astro-icon";
     [astro-icon] {
         color: var(--color-accent);
         height: 25px;
+        transition: 0.2s ease-out;
+        &:hover {
+            transform: translateY(-0.2rem);
+        }
         @media (max-width: 1200px) {
             color: var(--color-secondary);
             height: 25px;
