--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,11 +2,13 @@
 import Layout from "../layouts/Layout.astro";
 import Skills from "../components/Skills.astro";
 import { Image } from "astro:assets";
-import projectPopcorn from "../images/projectPopcorn.png";
-import projectBlog from "../images/project-blog.png";
-import projectCountdown from "../images/project-countdown.png";
-import projectPortfolio from "../images/project-portfolio.png";
-import projectTodo from "../images/project-todo.png";
+import portfolio from "../images/website-portfolio.png";
+import movie from "../images/website-movie.png";
+import blog from "../images/website-blog.png";
+import todo from "../images/website-todo.png";
+import gallery from "../images/website-gallery.png";
+import countdown from "../images/website-countdown.png";
+
 ---
 
 <Layout title="Edward Byrne">
@@ -21,16 +23,32 @@ import projectTodo from "../images/project-todo.png";
 			</p>
 		</div>
 		<Skills />
-
 	</section>
 	<section class="projects">
 		<h2>My projects</h2>
 		<div class="projects-wrapper">
 			<a href="/posts/post-1/" class="project">
-				<div class="image-wrapper">
+				<div class="image-wrapper" style="background-color: #64fff9;">
 					<Image
-						src={projectPopcorn}
-						alt="A bird sitting on a nest of eggs."
+						src={portfolio}
+						alt="Screenshot of the homepage of my portfolio website."
+						width="640"
+						height="360"
+					/>
+				</div>
+				<div class="text-wrapper">
+					<h3>Portfolio</h3>
+					<span>Astro</span>
+				</div>
+			</a>
+
+			<a href="posts/post-2/" class="project">
+				<div class="image-wrapper" style="background-color: #9ab;">
+					<Image
+						src={movie}
+						alt="Screenshot of the homepage of my movie website."
+						width="640"
+						height="360"
 					/>
 				</div>
 				<div class="text-wrapper">
@@ -40,67 +58,62 @@ import projectTodo from "../images/project-todo.png";
 			</a>
 
 			<a href="posts/post-2/" class="project">
-				<div class="image-wrapper">
+				<div class="image-wrapper" style="background-color: #f04d57;">
 					<Image
-						src={projectBlog}
-						alt="A bird sitting on a nest of eggs."
+						src={blog}
+						alt="Screenshot of the homepage of my blog website."
+						width="640"
+						height="360"
 					/>
 				</div>
 				<div class="text-wrapper">
-					<h3>Todo App</h3>
-					<span>Astro</span>
-				</div>
-			</a>
-
-			<a href="posts/post-3/" class="project">
-				<div class="image-wrapper">
-					<Image
-						src={projectCountdown}
-						alt="A bird sitting on a nest of eggs."
-					/>
-				</div>
-				<div class="text-wrapper">
-					<h3>Movie App</h3>
+					<h3>Blog</h3>
 					<span>React</span>
 				</div>
 			</a>
 
-			<a href="posts/post-4/" class="project">
-				<div class="image-wrapper">
+			<a href="posts/post-2/" class="project">
+				<div class="image-wrapper" style="background-color: white;">
 					<Image
-						src={projectTodo}
-						alt="A bird sitting on a nest of eggs."
+						src={todo}
+						alt="Screenshot of the homepage of my todo website."
+						width="640"
+						height="360"
 					/>
 				</div>
 				<div class="text-wrapper">
-					<h3>Todo App</h3>
-					<span>Astro</span>
-				</div>
-			</a>
-
-			<a href="posts/post-5/" class="project">
-				<div class="image-wrapper">
-					<Image
-						src={projectPortfolio}
-						alt="A bird sitting on a nest of eggs."
-					/>
-				</div>
-				<div class="text-wrapper">
-					<h3>Movie App</h3>
+					<h3>Todo</h3>
 					<span>React</span>
 				</div>
 			</a>
 
-			<a href="posts/post-6/" class="project">
-				<div class="image-wrapper">
+			<a href="posts/post-2/" class="project">
+				<div class="image-wrapper" style="background-color: #20c997;">
 					<Image
-						src={projectPopcorn}
-						alt="A bird sitting on a nest of eggs."
+						src={gallery}
+						alt="Screenshot of the homepage of my gallery website."
+						width="640"
+						height="360"
 					/>
 				</div>
 				<div class="text-wrapper">
-					<h3>Todo App</h3>
-					<span>Astro</span>
+					<h3>Gallery</h3>
+					<span>JavaScript</span>
+				</div>
+			</a>
+
+			<a href="posts/post-2/" class="project">
+				<div class="image-wrapper" style="background-color: #A49B1A;">
+					<Image
+						src={countdown}
+						alt="Screenshot of the homepage of my countdown website."
+						width="640"
+						height="360"
+					/>
+				</div>
+				<div class="text-wrapper">
+					<h3>Countdown</h3>
+					<span>JavaScript</span>
 				</div>
 			</a>
 		</div>
@@ -114,7 +127,6 @@ import projectTodo from "../images/project-todo.png";
 </Layout>
 
 <style lang="scss">
-
 	.icon-wrapper {
 		display: flex;
 		gap: 2rem;
@@ -178,17 +190,13 @@ import projectTodo from "../images/project-todo.png";
 			transition: 0.5s ease-out;
 		}
 		a:hover > div > h3 {
-			color: rgb(100, 255, 218);
-		}
-		a:hover {
-			transform: translateY(-0.5rem);
+			color: var(--color-accent);
 		}
 	}
 	.project {
 		display: block;
 	}
 	.image-wrapper {
-		background-color: #877eff;
 		padding: 3rem 2.5rem;
 	}
 	img {
@@ -235,7 +243,7 @@ import projectTodo from "../images/project-todo.png";
 			font-weight: 600;
 			text-decoration: none;
 			text-decoration: underline;
-			color: var(--color-accent)
+			color: var(--color-accent);
 		}
 	}
 </style>
