add missing aria labels

--- a/src/components/Accessibility.astro
+++ b/src/components/Accessibility.astro
@@ -3,10 +3,10 @@ import { Icon } from "astro-icon";
 ---
 
 <div class="accessibility-wrapper">
-  <button class="theme-toggle" data-tooltip="Toggle Theme">
+  <button class="theme-toggle" data-tooltip="Toggle Theme" aria-label="Toggle theme">
     <Icon name="ri:contrast-2-fill" />
   </button>
-  <button class="font-toggle" data-tooltip="Toggle Font Size">
+  <button class="font-toggle" data-tooltip="Toggle Font Size" aria-label="Toggle font">
     <Icon name="ri:font-size-2" />
   </button>
 </div>
