--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -1,12 +1,33 @@
 <div class="skills-wrapper">
-    <a href="http://" target="_blank" rel="noopener noreferrer">React</a>
-    <a href="http://" target="_blank" rel="noopener noreferrer">Astro</a>
-    <a href="http://" target="_blank" rel="noopener noreferrer">JavaScript</a>
-    <a href="http://" target="_blank" rel="noopener noreferrer">Framer Motion</a
+    <a href="https://react.dev/" target="_blank" rel="noopener noreferrer"
+        >React</a
     >
-    <a href="http://" target="_blank" rel="noopener noreferrer">SASS</a>
-    <a href="http://" target="_blank" rel="noopener noreferrer">HTML5</a>
-    <a href="http://" target="_blank" rel="noopener noreferrer">CSS3</a>
+    <a href="https://astro.build/" target="_blank" rel="noopener noreferrer"
+        >Astro</a
+    >
+    <a
+        href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"
+        target="_blank"
+        rel="noopener noreferrer">JavaScript</a
+    >
+    <a
+        href="https://www.framer.com/motion/"
+        target="_blank"
+        rel="noopener noreferrer">Framer Motion</a
+    >
+    <a href="https://sass-lang.com/" target="_blank" rel="noopener noreferrer"
+        >SASS</a
+    >
+    <a
+        href="https://developer.mozilla.org/en-US/docs/Web/HTML"
+        target="_blank"
+        rel="noopener noreferrer">HTML5</a
+    >
+    <a
+        href="https://developer.mozilla.org/en-US/docs/Web/CSS"
+        target="_blank"
+        rel="noopener noreferrer">CSS3</a
+    >
 </div>
 
 <style lang="scss">
