--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -3,16 +3,16 @@ import { Icon } from "astro-icon";
 ---
 
 <div class="socials-wrapper">
-    <a href="">
+    <a href="" aria-label="GitHub">
         <Icon name="mdi:github" />
     </a>
-    <a href="">
+    <a href="" aria-label="Linkedin">
         <Icon name="ri:linkedin-fill" />
     </a>
-    <a href="">
+    <a href="" aria-label="Instagram">
         <Icon name="mdi:instagram" />
     </a>
-    <a href="">
+    <a href="" aria-label="Twitter">
         <Icon name="mdi:twitter" />
     </a>
 </div>
